--- a/aardbei.html
+++ b/aardbei.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growyourfood</title>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet"> 
+    <style>
+        body {
+            font-family: 'Geologica', sans-serif;
+        }
+        </style>
 </head>
 
-<body>
+<body class="Aardbeien">
     <header>
         <nav>
             <ul>
-                <li> <a href="#">Aardbeien</a> </li>
+                <!-- <li> <a href="#">Aardbeien</a> </li> -->
                 <li> <a href="index.html">Home</a> </li>
                 <li> <a href="informatie.html">Informatie</a> </li>
                 <li> <a href="fruitzoek.html">Zoek je fruit </a> </li>
@@ -23,13 +29,56 @@
 
     <main>
         <h1> Aardbeien</h1>
+
+        <section>
+            <p>
+            Planten in: Februari - Maart
+            </p>
+            <p>
+                Oogsten in: Juni - Oktober
+            </p>
+        </section>
+
+        <section>
+            <h2>Stap 1</h2>
+            <p>Zorg voor luchtige en vochthoudende grond. 
+                Spit de grond door en voeg eventueel mest of plantenvoeding toe. </p>
+            <img src="../individueel project 1 - code/images/ip1 - aarde met schep.png" alt="schep">
+        </section>
+
+        <!-- <section>
+            <img src="../individueel project 1 - code/images/ip1 - aarde met schep.png" alt="schep">
+    
+        </section> -->
+
+        <section>
+            <h2> Stap 2</h2>
+            <p>Plant de zaadjes 3mm diep en  ongeveer 25 cm uit.
+                Door ze genoeg uit elkaar te planten krijgen de plantjes voldoende licht en lucht.
+                Span eventueel een plastic folie over het plantbed .Zo vermijd je onkruid
+             en zorg je ervoor dat de bodem vocht en warmte beter vasthoudt.
+            </p>
+            <img src="../individueel project 1 - code/images/ip1-aardezaaien.png" alt="zaaien">
+        </section>
+        <section>
+            <h2> Stap 3</h2>
+            <p>Geef de plantjes elke dag water. 
+            Hoe groter de plant wordt hoe meer water ze nodig hebben. 
+            </p>
+            <img src="../individueel project 1 - code/images/ip1 water geven.png" alt="watergeven">
+        </section>
+
+        <section>
+            <h3>Tip:</h3>
+        <p>Verwijder regelmatig de rottende aardbeien om schimmelziekten in de kiem te smoren. </p>      
+        </section>
     </main>
 
 
 
 
 
-
+    <footer> &copy;Growyourfood 2023</footer>
 
 </body>
 </html>
