--- a/informatie.html
+++ b/informatie.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growyourfood</title>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet"> 
+    <style>
+        body {
+            font-family: 'Geologica', sans-serif;
+        }
+        </style>
 </head>
 
 <body>
@@ -30,7 +36,8 @@
 
 
 
-
+<footer> &copy;Growyourfood 2023</footer>
 
 </body>
+
 </html>
