--- a/informatie.html
+++ b/informatie.html
@@ -1,42 +1,33 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growyourfood</title>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Geologica', sans-serif;
         }
-        </style>
+    </style>
 </head>
 
 <body>
     <header>
         <nav>
-            <ul>
-                <li> <a href="index.html">home</a> </li>
-                <li> <a href="#">informatie</a> </li>
-            </ul>
+            <a href="index.html"><img class="icon" src="./images/home.svg" alt="Home"></a>
+            <a href="#"><img class="icon" src="./images/info.svg" alt="About"></a>
         </nav>
     </header>
-  
     <main>
         <h1> Informatie </h1>
-       
 
 
     </main>
 
-
-
-
-
-
-<footer> &copy;Growyourfood 2023</footer>
+    <footer> &copy;Growyourfood 2023</footer>
 
 </body>
 
